fix location spacing - mobile

--- a/style.css
+++ b/style.css
@@ -922,7 +922,6 @@ footer {
   font-size: 0.75em;
   color: #696969;
   margin-top: 0;
-  margin-left: -20%;
   display: block;
   }
 
